[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sabotage"
version = "0.1.0"
description = "効率よくだらだらディズニー執事 — Phase 0: データフライホイール(ポーラー+SQLite蓄積)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
sabotage-poll = "sabotage.data.poller:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# ネットワークに触れるテストは書かない方針。全テストは実形状フィクスチャ駆動。
addopts = "-q"
