[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sabotage"
version = "0.1.0"
description = "効率よくだらだらディズニー執事 — Phase 0: データフライホイール(ポーラー+SQLite蓄積)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pandas>=2.2",
]
viz = [
    "pandas>=2.2",
    "streamlit>=1.36",
    "altair>=5",
]

[project.scripts]
sabotage-poll = "sabotage.data.poller:main"
sabotage-seed-demo = "sabotage.tools.seed_demo:main"
sabotage-scrape = "sabotage.tools.scrape:main"
sabotage-backfill = "sabotage.tools.backfill:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# ネットワークに触れるテストは書かない方針。全テストは実形状フィクスチャ駆動。
addopts = "-q"
